# OptimizedRegionMergingInModernStyle

./: .gitignore  CHANGES.md  CMakeLists.txt  GETTING_STARTED.md  README.md  main.cpp  run_experiment.py
core/: edge.hpp  types.hpp  vertex.hpp
graph/: region_adjacency_graph.cpp  region_adjacency_graph.cpp.backup  region_adjacency_graph.hpp
io/: point_cloud.hpp  point_cloud_pcl.hpp
scripts/: evaluate.py  preprocess.py  run_experiment.py  vis_gt.py
utils/: timer.hpp
